Closed Bug 756614 Opened 14 years ago Closed 11 years ago

IonMonkey: OOM Testing: Assertion failure: !used(), at js/src/ion/shared/Assembler-shared.h:256

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Assigned: jandem)

References

Details

(Keywords: assertion, testcase, Whiteboard: [ion:t])

Attachments

(1 file)

The following command asserts on ionmonkey revision 8c54899dae82 (dbg build): js -e 'const libdir = "js/src/jit-test/lib/";' -A 9439 -f js/src/jit-test/tests/debug/Object-parameterNames.js
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → DUPLICATE
I was wrong, the assertion is still there on OOM, just needs another test (rev 88ea2e529609): js -e 'const libdir = "js/src/jit-test/lib/";' -A 7315 -f js/src/jit-test/tests/pic/length_string_object.js
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
This one is annoying: if we return early due to an OOM, not all labels are bound and the Label destructor asserts. dvander, should we remove the assert? It'd be unfortunate but I can't think of another way to fix this bug.
The assert is valuable, more valuable than the test which is not a real bug. I'm wont to consider it WONTFIX or find a hacky, debug only way to make it not appear when OOM testin.
Attached patch PatchSplinter Review
OK, here's the hack to disable the assert when we triggered an OOM.
Assignee: general → jdemooij
Status: REOPENED → ASSIGNED
Attachment #626362 - Flags: review?(dvander)
Attachment #626362 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago14 years ago
Resolution: --- → FIXED
I'm afraid this fix is not sufficient. I'm hitting this assert also in LangFuzz (without -A), due to OOM. We probably need to recognize the OOM condition itself and not only the artificial condition caused by OOM testing with -A.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
decoder please file a new bug if you're still seeing this, but I think this was fixed a while ago.
Status: REOPENED → RESOLVED
Closed: 14 years ago11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: