Bug 756614 - Disable Label assert when OOM testing. r=dvander